# Oreilly-AI-Systems-In-Production

./: .gitignore  README.md  pyproject.toml  requirements.txt
Section 2 - Local Model Serving/: Ollama-API.py  Ollama-python-library.py
Section 3 - RAG/: 3-RAGs.ipynb  3-RAGs_enhanced.ipynb
Section 4 - Agentic Frameworks/: DEMO_SCRIPT.md  README.md  SETUP.md  agent_production_demo.ipynb  agent_production_demo.py  run_demo.sh
Section 5 - AI Models in the Cloud/: Anthropic Chatbot Guardrails.py  Invoke bedrock model.py
Section 6 - Agent Security/: 6-Agentic_security.ipynb
Section 7 - monitoring and Observability/: 7-monitoring_and_observability.ipynb
docs/youtube/: transcript.txt  transcript_w_LlamaIndex.txt
