[project]
name = "oreilly-ai-systems-in-production"
version = "0.1.0"
description = "O'Reilly AI Systems in Production - Training Materials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "streamlit>=1.31.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.4.22",
    "wikipedia>=1.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "typing-extensions>=4.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
